[package]
name = "interrupt-read"
version = "0.6.0"
edition = "2024"
authors = ["AhoyISki"]
description = "An simple implementation of an interruptable reader."
repository = "https://github.com/AhoyISki/interrupt-read"
license = "MIT"
readme = "README.md"
keywords = ["io", "channel", "buffer"]
categories = ["rust-patterns", "data-structures"]
